--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <title>CISY (Can I Smoke Yey?)</title>
+    <title>CISY (Can I Smoke Yet?)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
